--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="src/css/estilos.css">
+    <link rel="icon" href="./src/imagens/icons-x-men-64.ico">
 </head>
 <body>
     <header class="cabecalho">
